# EasyFIX

./: setup.cfg
src/EasyFIX/: Body.py  Header.py  Message.py  Messages.py  parser.py
src/EasyFIX/definitions/: header.py  market_data_tags.py  market_data_values.py
src/EasyFIX/definitions/market_data/: tags.py  values.py
src/tests/: main.py  sample_msg.txt  simplefix_wrapper.py
